Bug 487287 - Can't play anything on Microsoft Windows
Summary: Can't play anything on Microsoft Windows
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.1.1
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-20 16:20 UTC by surferjoe
Modified: 2024-05-22 20:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description surferjoe 2024-05-20 16:20:46 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY
Haruna can't play any file in windows. 

STEPS TO REPRODUCE
1. Open a video file
2. 
3. 

OBSERVED RESULT
Video doesn't start and Haruna seems to continuously select the following file inside the folder in loop. Filename in the title bar keeps on changing.

EXPECTED RESULT
Play selected video

SOFTWARE/OS VERSIONS
Windows: 11
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 george fb 2024-05-22 20:07:44 UTC
Git commit 175b3843872664968a620351e3cf4322acc6292a by George Florea Bănuș.
Committed on 22/05/2024 at 20:07.
Pushed by georgefb into branch 'master'.

main.cpp: set graphics api to opengl

M  +4    -0    src/main.cpp

https://invent.kde.org/multimedia/haruna/-/commit/175b3843872664968a620351e3cf4322acc6292a