main.cpp: set graphics api to opengl

BUG: 487287